# stack

./: .gitignore  .replit  Cargo.toml  README.md  TODO.md  build-wasm.sh  justfile  replit.nix  test.sh  theme.tmLanguage.json
.github/workflows/: deploy_book.yml  tests.yml
benches/: eval.rs
docs/: book.toml
docs/src/: SUMMARY.md  glossary.md  installation.md  introduction.md
docs/src/debugger/: installation.md  usage.md
docs/src/features/: scopes.md
docs/src/introduction/: functions.md  lispy-syntax.md  lists.md  loops.md  scopes.md  stack.md  syntax.md  variables.md
docs/src/reference/: builtins.md
docs/theme/: highlight.js
examples/: debug.rs  debug.stack  for_each.rs  for_each.stack  let.rs  let.stack  reverse.rs  reverse.stack  syscall.rs  syscall.stack
src/: chain.rs  core.stack  evaluator.rs  expr.rs  expr_tree.rs  generate_highlighter.rs  interner.rs  intrinsics.rs  journal.rs  lexer.rs  lib.rs  main.rs  parser.rs  program.rs  scope.rs  template.tmLanguage.json  test_utils.rs
src/core/: core.stack  module.stack
src/module/: map.rs  mod.rs
src/module/core/: cast.rs  compare.rs  control_flow.rs  core.rs  debug.rs  eval.rs  io.rs  list.rs  logical.rs  math.rs  mod.rs  scope.rs  stack.rs
stack/: Cargo.toml
stack-cli/: Cargo.toml
stack-cli/src/: lib.rs  main.rs  server.rs
stack-compiler/: Cargo.toml
stack-compiler/src/: main.rs
stack-core/: Cargo.toml
stack-core/src/: chain.rs  compile.rs  compiler.rs  context.rs  engine.rs  expr.rs  intrinsic.rs  journal.rs  lexer.rs  lib.rs  module.rs  parser.rs  scope.rs  source.rs  symbol.rs  tests.rs  val.rs  vec_one.rs
stack-core/tests/: _runner.rs
stack-core/tests/intrinsics/: arithmetic.stack  assert_fail.stack  assert_okay.stack  compare.stack  logical.stack  orelse.stack  pop.stack  push.stack  record.stack  stack.stack
stack-debugger/: Cargo.toml
stack-debugger/src/: lib.rs  main.rs  module.rs
stack-std/: Cargo.toml
stack-std/src/: fs.rs  lib.rs  record.rs  scope.rs  str.rs  tag.rs
stack-wasm/: Cargo.toml  stack.ts
stack-wasm/src/: lib.rs
stack/benches/: eval.rs
stack/src/: context.rs  engine.rs  expr.rs  intrinsic.rs  journal.rs  lexer.rs  lib.rs  module.rs  parser.rs  scope.rs  source.rs
stack/tests/: _runner.rs  for_each.stack  module.stack  objects.stack
stack/tests/intrinsics/: logical.stack  stack.stack
std/: assert.stack  debug.stack  let.stack  linux-x86_64.stack  list.stack  map.stack  math.stack  module.stack  stack.stack  type.stack
tests/: _runner.rs  assert.stack  debug.stack  example_module.stack  for_each.stack  let.stack  map.stack  module.mod.stack  module.stack  reverse.stack  scope.stack  type.stack
