[package]
name = "stack"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "fat"
codegen-units = 1

[dependencies]
clap = { version = "4", features = ["derive"] }
codespan-reporting = "0.11.1"
crossterm = "0.27.0"
itertools = "0.12.0"
notify = "6"
rustyline = "13"
termion = "3.0.0"
thiserror = "1"

[dependencies.lasso]
version = "0.7.2"
features = ["inline-more", "multi-threaded"]

[dev-dependencies]
test-case = "3"
criterion = "0.5.1"

[[bench]]
name = "eval"
harness = false

[[bin]]
name = "stack"
path = "src/main.rs"

# [[bin]]
# name = "stack-generate"
# path = "src/generate_highlighter.rs"
