[workspace]
resolver = "2"
members = ["stack-core", "stack-std", "stack-cli", "stack-debugger"]

[workspace.dependencies]
unicode-segmentation = "1"
compact_str = { version = "=0.8.0-beta", features = ["serde"] }

test-case = "3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
