[package]
name = "stack-cli"
version = "0.1.0"
edition = "2021"

[features]
default = ["stack-std"]
stack-std = ["dep:stack-std"]

[dependencies]
clap = { version = "4", features = ["derive"] }
reedline = { version = "0.31.0", features = ["system_clipboard"] }
notify = "6"

stack = { path = "../stack" }
stack-std = { path = "../stack-std", optional = true }

[[bin]]
name = "stack"
path = "src/main.rs"
