[package]
name = "stack-debugger"
version = "0.1.0"
edition = "2021"

[features]
default = ["stack-std"]
stack-std = ["dep:stack-std"]

[dependencies]
clap.workspace = true
notify = "6"
eframe = { version = "0.27.2" }

stack-core = { path = "../stack-core" }
stack-std = { path = "../stack-std", optional = true }

[[bin]]
name = "stack-debugger"
path = "src/main.rs"
