[package]
name = "stack"
version = "0.1.0"
edition = "2021"

[dependencies]
internment = "0.7.4"
unicode-segmentation = "1"

# codespan-reporting = "0.11.1"
# crossterm = "0.27.0"
# itertools = "0.12.0"
# rustyline = "13"
# termion = "3.0.0"
# thiserror = "1"

[dev-dependencies]
test-case = "3"
# criterion = "0.5.1"
